@@ -33,9 +33,10 @@ from algorithms import (mean_cov, covariance, principal_components, bdist,
                         linear_discriminant, create_training_classes, ndvi,
                         orthogonalize, transform_image, unmix, spectral_angles,
                         calc_stats, cov_avg, msam)
-from classifiers import GaussianClassifier, MahalanobisDistanceClassifier
+#from classifiers import (GaussianClassifier, MahalanobisDistanceClassifier,
+#                         PerceptronClassifier)
+from classifiers import *
 from clustering import L1, L2, kmeans, cluster, isoCluster
-from perceptron import PerceptronClassifier
 from resampling import BandResampler
 from transforms import LinearTransform
 from detectors import *
